--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
   "build": {
     "env": {
-      "PYTHON_VERSION": "3.9"
+      "PYTHON_VERSION": "3.9",
+      "NPM_CONFIG_BUILD_FROM_SOURCE": "false",
+      "SQLITE3_DISABLE_PREBUILT": "false"
     },
-    "commands": {
+    "scripts": {
       "preinstall": "apt-get update && apt-get install -y python3-distutils"
     }
   }
